Changelog
=========

0.4.0 (IN DEVELOPMENT)
~~~~~~~~~~~~~~~~~~

* Choleksy flows

0.3.1 (21.5.2020)
~~~~~~~~~~~~~~~~~~

* Added resume option
* Neural spline flows
* Added example notebooks 

0.2.0 (11.12.2019)
~~~~~~~~~~~~~~~~~~

* Added derived parameters
* Added rejection sampling

0.1.4 (xx.xx.xxxx)
~~~~~~~~~~~~~~~~~~

* Added patience parameter to stop training early when validation loss hasn't improved
* Fix: Dynamical stepsize