@@ -23,21 +23,21 @@ python setup.py install
 
 Nested sampling examples can be found in the `examples/nested` directory, and can be run with e.g. 
 ```
-python rosenbrock.py
+python run.py --x_dim 2 --likelihood rosenbrock
+```
+There is also an example notebook. Runs can be analysed by
+```
+python analyse.py
 ```
 
 ### MCMC Sampling
 
-MCMC sampling examples can be found in the `examples/mcmc` directory, and can be run with e.g. 
+MCMC sampling (work in progress) examples can be found in the `examples/mcmc` directory, and can be run with e.g. 
 ```
-python examples/mcmc/rosenbrock.py
+python run.py --x_dim 2 --likelihood rosenbrock
 ```
-### Analysing runs
+There is also an example notebook.
 
-Runs can be analysed by
-```
-python analyse.py
-```
 ### Attribution
 
 Please cite [Moss (2019)](https://arxiv.org/abs/1903.10860) if you find the 
