@@ -5,6 +5,8 @@ Changelog
 ~~~~~~~~~~~~~~~~~~
 
 * Choleksy flows
+* More likelihood examples
+* Added tests
 
 0.3.1 (21.5.2020)
 ~~~~~~~~~~~~~~~~~~
